# linalgcpp_example

./: .gitignore  CMakeLists.txt  README.md
cmake/: MY_PROJECTConfig.cmake.in  exampleConfig.cmake.in
config/: MY_PROJECT_config.h.in  setup.sh
examples/: CMakeLists.txt  example_file.cpp
include/: src_file.hpp
src/: src_file.cpp
